after first migration (changed the connection string with demo data)

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "WebApiDatabase": "Host=localhost; Database=inzynieria_oprogramowania; Username=APU_USER; password=12345"
+    "WebApiDatabase": "Host=localhost; Port=5435; Database=InzynieriaOproPosgres; Username=postgres; password=changeme!"
   }
 }
